--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 auto;
 }
 .header_left{
     width: 0.6rem;
@@ -41,6 +42,7 @@
     border-bottom: 0.2rem solid #FF0036;
     border-left: 0.2rem solid #FF0036;
     border-right: 0.2rem solid #FF0036;
+    margin: 0 auto;
 }
 .search_ssk{
     display: block;
@@ -50,12 +52,13 @@
     border-radius: 0.1rem;
 }
 .nav{
-    width: 100%;
+    width: 7.5rem;
     height: 1.56rem;
     background-color: #ffffff;
     border-left: 0.25rem solid #ffffff;
     border-right: 0.25rem solid #ffffff;
     box-sizing: border-box;
+    margin: 0 auto;
 }
 .nav_li{
     width: 1.4rem;
